middleware/xxl-job/overlays/toc-dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xxl-job-admin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - algo-rancher-dev.aqumon.com
      secretName: star-aqumon-com-cert
  rules:
    - host: algo-rancher-dev.aqumon.com
      http:
        paths:
          - path: /xxl-job-admin
            pathType: ImplementationSpecific
            backend:
              serviceName: xxl-job-admin
              servicePort: 8080
